# TelegramSecurityBot

./: .gitignore  README.md  app.py  bot_runner.py  core.py  group_scanner.py  main.py  models.py  payment_monitor.py  payment_processor.py  payment_verification.py  paypal_integration.py  pyproject.toml  render.yaml  replit.md  routes.py  run_server.py  security_middleware.py  threat_intelligence.py  utils.py  webhook_payment_processor.py  webhook_routes.py
static/css/: cyberpunk.css
static/js/: dashboard.js
templates/: base.html  dashboard.html  index.html  paypal_cancel.html  paypal_checkout.html  paypal_error.html  paypal_success.html
